# Sifter-NSDI24

./: README.md
hw/config/u250-smartnic/: firmware_config.yaml
hw/cores/hdl/smartnic/src/: dma_buf_bhv.vhd  fifo_wrapper.vhd  fin_time_arr_bhv.vhd  nxuser_sandbox_smartnic.vhd  pifo.vhd  sifter_level.vhd  sifter_test_wrapper.vhd  xpm_fifo_sync.vhd
src/: constants.vhd  pifo_wrapper.vhd  sifter_level.vhd  sifter_lvl_top.vhd  sifter_test_wrapper.vhd
sw/enyx-hw-mmio-test/: CMakeLists.txt  main.cpp
sw/enyx-hw-mmio-test/data/: fixed320.enq  fixed320.sav  fixed320_2500.enq  fixed320_4000.enq  fixed320_5000.enq  fixed320_5000_2023Apr22.deq  fixed320_5000_2023Apr22.ovfl  fixed352.conf  fixed352.deq  fixed352.enq  fixed352.ovfl  fixed370.conf  fixed370.deq  fixed370.enq  fixed370.ovfl  rand320.conf  rand320.deq  rand320.enq  rand320.ovfl  rand320_100.enq  rand320_2500.enq  rand320_2500_2023Apr23.deq  rand370.conf  rand370.deq  rand370.enq  rand370.ovfl  sentinel_corner_case.deq  sentinel_corner_case.enq  sentinel_corner_case.ovfl  smallFlows.conf  smallFlows352.enq
tb/: Makefile  fixed.py  fixed370.conf  fixed370.deq  fixed370.ovfl  pifo.save  rand.py  rand370.conf  rand370.deq  rand370.ovfl  results.xml  sentinel_corner_case.py  sifter  sifter_lvl_tb.py  sifter_lvl_top  sifter_tb.py  sifter_test.py  sifter_test_wrapper  smallFlows.conf  smallFlows.deq  smallFlows.enq  smallFlows.py
tb/sim_build/: work-obj08.cf
